# strava-local-heatmap-tool

./: .pre-commit-config.yaml  license  pyproject.toml  readme.md  requirements.txt  strava-local-heatmap-tool.py
.github/workflows/: pre-commit-workflow.yaml
strava_local_heatmap_tool/: strava_local_heatmap_tool.py
templates/: canvas-a3.xcf  canvas-square.xcf
